# wbcd_ws

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/arm_control/: JointControl.h  JointInformation.h  PosCmd.h
devel/include/arx5_arm_msg/: RobotCmd.h  RobotStatus.h
devel/lib/arx_x7_controller/: keyboard  x7_controller
devel/lib/pkgconfig/: arm_control.pc  arx5_arm_msg.pc  arx_x7_controller.pc  x7s_control.pc  x7s_description.pc  x7s_moveit_config.pc
src/ARX_x7_ros/arx_x7_controller/: CMakeLists.txt
src/ARX_x7_ros/arx_x7_controller/include/arx_x7_controller/: keyboard.hpp  x7_controller.hpp
src/ARX_x7_ros/arx_x7_controller/launch/: display.launch  gazebo.launch  left_arm.launch  left_arm_inference.launch  right_arm.launch  right_arm_inference.launch
src/ARX_x7_ros/arx_x7_controller/lib/arx_x7_src/include/arx_x7_src/interfaces/: InterfacesPy.hpp  InterfacesThread.hpp
src/ARX_x7_ros/arx_x7_controller/src/: keyboard.cpp  lift_controller.cpp  ready.py  x7_controller.cpp
src/x7s/x7s_control/: CMakeLists.txt  package.xml
src/x7s/x7s_control/config/: control.yaml  control_.yaml  control__.yaml
src/x7s/x7s_control/launch/: control.launch
src/x7s/x7s_description/: CMakeLists.txt
src/x7s_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/x7s_moveit_config/config/: fake_controllers.yaml  gazebo_x7s.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  x7s.srdf
src/x7s_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  (+4 more)
tools/: 00make.sh  01arm_single.sh  02single_vr.sh  03double_vr.sh
(+42 files in other folders)
