<?xml version="1.0"?>
<package format="2">
  <name>x7s_control</name>
  <version>0.2.3</version>
  <description>
    The package to control x7s
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ros_controllers</depend>
  <depend>twist_mux</depend>
  <depend>robot_localization</depend>
</package>
